--- a/home.html
+++ b/home.html
@@ -14,7 +14,15 @@
         <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/Outland3r2007/Outland3r/main/resources/favicon.ico">
         <link rel="manifest" href="manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-        property="og:site_name" content="Silic0nHub"><meta property="og:title" content="Silic0nHub"><meta property="og:type" content="website"><meta property="og:description" content="A new way to experience tweaks"><meta property="og:image" content="https://raw.githubusercontent.com/Outland3r2007/Silic0nHub/main/resources/favicon.ico"><meta property="og:image:type" content="image/jpeg"><meta property="og:image:width" content="1280"><meta property="og:image:height" content="800"><meta property="og:url"
+       <meta property="og:site_name" content="Silic0nHub">
+       <meta property="og:title" content="Silic0nHub">
+       <meta property="og:type" content="website">
+       <meta property="og:description" content="A new way to experience tweaks">
+       <meta property="og:image" content="https://raw.githubusercontent.com/Outland3r2007/Silic0nHub/main/resources/favicon.ico">
+       <meta property="og:image:type" content="image/jpeg">
+       <meta property="og:image:width" content="1024">
+       <meta property="og:image:height" content="1024">
+       <meta property="og:url"
 <meta charset="utf-8">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <style>
