--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
        <meta property="og:image:width" content="1024">
        <meta property="og:image:height" content="1024">
        <meta property="og:url"
+       <script src="https://cdn.jsdelivr.net/npm/cache@3/index.min.js"></script>
 <meta charset="utf-8">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <style>
