--- a/search.html
+++ b/search.html
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="css/rectangle.css">
         <link rel="stylesheet" href="css/tapbar.css">
         <link rel="stylesheet" href="css/alertbox.css">
-       <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="css/slider.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/framework7-icons@5/css/framework7-icons.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/cache@3/index.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 <meta charset="utf-8">
 <meta name="apple-mobile-web-app-capable" content="yes">
