--- a/sections.html
+++ b/sections.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/slider.css">
         <link rel="stylesheet" href="css/navigationbuttons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/framework7-icons@5/css/framework7-icons.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/cache@3/index.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 <meta charset="UTF-8">
 
