--- a/settings.html
+++ b/settings.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/navigation.css">
         <link rel="manifest" href="manifest.json">
         <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/Outland3r2007/Outland3r/main/resources/favicon.ico">
+        <script src="https://cdn.jsdelivr.net/npm/cache@3/index.min.js"></script> 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/framework7-icons@5/css/framework7-icons.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 <meta charset="UTF-8">
