--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/slider.css">
         <link rel="stylesheet" href="css/navigation.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/framework7-icons@5/css/framework7-icons.min.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/Outland3r2007/Outland3r/main/resources/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="resources/favicon.ico">
         <link rel="manifest" href="manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
        <meta property="og:site_name" content="Silic0nHub">
